--- a/storage/app/public/css/style.scss
+++ b/storage/app/public/css/style.scss
@@ -62,6 +62,13 @@ h1,h2,h3,h4,h5{
         display: inline-block;
         
     }
+    &__types{
+        display:flex; 
+        gap:20px; 
+        list-style-type:none; 
+        padding-left:5px;
+        flex-wrap: wrap;
+    }
     &__shops{
         padding-top:100px;
     }
